--- a/components/debounce/CMakeLists.txt
+++ b/components/debounce/CMakeLists.txt
@@ -1,12 +1,10 @@
 idf_component_register(
-    SRCS 
-        "debounce.c"
-    INCLUDE_DIRS 
-        "include" 
-    PRIV_INCLUDE_DIRS 
-        "private"
-    REQUIRES 
-        driver 
-        esp_timer 
-        mqtt
-    )
+    SRCS
+        "src/debounce.c"
+    INCLUDE_DIRS
+        "include"
+    REQUIRES
+        driver
+        esp_timer
+        app_shared
+)
