--- a/components/wifi_manager/CMakeLists.txt
+++ b/components/wifi_manager/CMakeLists.txt
@@ -1,13 +1,13 @@
 idf_component_register(
-    SRCS 
-        "src/wifi_manager.c" 
-        "src/wifi_credentials.c" 
+    SRCS
+        "src/wifi_credentials.c"
+        "src/wifi_manager.c"
     INCLUDE_DIRS
-        "." 
         "include"
-    REQUIRES 
-        nvs_flash 
-        esp_wifi 
-        esp_system
-        wifi_provisioning
+    REQUIRES
+        nvs_flash       # <-- add this
+        esp_wifi        # already needed
+        esp_netif
+        esp_event
+        log
 )
