--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,11 @@
-idf_component_register(SRCS "main.c"
-                       INCLUDE_DIRS "."
-                       REQUIRES mqtt esp_wifi esp_netif nvs_flash driver debounce wifi_manager wifi_provisioning)
+idf_component_register(
+    SRCS
+        "main.c"
+    INCLUDE_DIRS
+        "."
+    REQUIRES
+        app_shared
+        debounce
+        wifi_manager
+        wifi_provisioning
+)
