Add debounce report level configuration

--- a/components/app_shared/CMakeLists.txt
+++ b/components/app_shared/CMakeLists.txt
@@ -1,8 +1,5 @@
-# components/app_shared/CMakeLists.txt
+# File: components/app_shared/CMakeLists.txt
 idf_component_register(
-    INCLUDE_DIRS
-        "include"
-    REQUIRES
-        mqtt        # for mqtt_client.h
-        freertos    # for FreeRTOS/queues types
+    INCLUDE_DIRS "include"
+    REQUIRES    driver freertos
 )
