--- a/components/debounce/CMakeLists.txt
+++ b/components/debounce/CMakeLists.txt
@@ -1,10 +1,12 @@
+# File: components/debounce/CMakeLists.txt
 idf_component_register(
     SRCS
         "src/debounce.c"
     INCLUDE_DIRS
-        "include"
+        "include"           # headers owned by *this* component
     REQUIRES
-        driver
-        esp_timer
-        app_shared
+        app_shared          # <-- gives you app_shared/include on the include path
+        freertos
+        esp_driver_gpio
+        log
 )
