--- a/components/wifi_provisioning/CMakeLists.txt
+++ b/components/wifi_provisioning/CMakeLists.txt
@@ -1,13 +1,15 @@
+# File: components/wifi_provisioning/CMakeLists.txt
 idf_component_register(
-    SRCS
+    SRCS 
         "src/wifi_provisioning.c"
         "src/web_server.c"
-    INCLUDE_DIRS
+    INCLUDE_DIRS 
         "include"
     REQUIRES
-        app_shared
-        esp_wifi
-        esp_event
-        esp_http_server
-        nvs_flash
+        esp_http_server 
+        nvs_flash 
+        esp_netif 
+        esp_event 
+        esp_wifi 
+        freertos
 )
