--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,11 +1,15 @@
+# File: main/CMakeLists.txt
 idf_component_register(
-    SRCS
-       main.c
-    INCLUDE_DIRS
+    SRCS 
+        "main.c"
+    INCLUDE_DIRS 
         "."
-    REQUIRES
-        app_shared
-        debounce
-        wifi_manager
-        wifi_provisioning
+    REQUIRES 
+        app_shared 
+        debounce 
+        wifi_provisioning 
+        esp_wifi 
+        esp_netif 
+        nvs_flash 
+        mqtt
 )
